# robot

./: .gitignore  README.md  pyproject.toml  read.md
.kiro/specs/robot-brain-backend/: design.md  requirements.md  tasks.md
data/: robot_brain.db  test_robot.db
doc/: architecture.md  test_report.md  web_interface_design.md
robot_brain/: __init__.py  cli.py  logging_config.py  main.py
robot_brain/api/: __init__.py  server.py  state.py  websocket.py
robot_brain/api/routes/: chat.py  command.py  map_routes.py  status.py
robot_brain/core/: __init__.py  enums.py  models.py  state.py
robot_brain/graph/: __init__.py  kernel_graph.py  react_graph.py
robot_brain/llm/: __init__.py  config.py  qwen_client.py
robot_brain/persistence/: __init__.py  checkpointer.py  sqlite_checkpointer.py
robot_brain/service/chat/: __init__.py  chat_service.py
robot_brain/service/intent/: __init__.py  parser.py
robot_brain/service/kernel/: __init__.py  base.py  event_arbitrate.py  hci_ingress.py  kernel_route.py  task_queue.py  telemetry_sync.py  world_update.py
robot_brain/simulation/: __init__.py  robot_simulator.py
tests/: test_event_arbitrate_properties.py  test_guardrails_properties.py  test_hci_ingress_properties.py  test_human_approval_properties.py  test_qwen_chat.py  test_react_decide_properties.py  test_skill_registry_properties.py  test_sqlite_checkpointer.py  test_state_properties.py  test_stop_or_loop_properties.py
web/: index.html
web/css/: chat.css  main.css  map.css
web/js/: api.js  app.js  chat.js  map.js  robot.js  websocket.js
(+17 files in other folders)
